--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
       minima assumenda iste amet ad, quibusdam nihil eius! Ipsam, vel!
     </p>
     <h6>HomeWork</h6>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat adipisci
+      architecto aperiam consequatur placeat, voluptatum aliquid eius soluta
+      libero assumenda suscipit explicabo tempora animi amet molestiae, quos
+      tenetur natus asperiores!
+    </p>
   </body>
 </html>
